# browser-copilot

./: .gitignore  README.md  devbox.json  docker-compose.yml
.github/: semver-check.sh  set-project-version.sh
.github/workflows/: build.yml  release.yml
agent/: Dockerfile  README.md  pyproject.toml  sample.env
agent-extended/: README.md  sample.env
agent-extended/gpt_agent/: __main__.py  agent.py  api.py  file_system_repos.py
agent-extended/gpt_agent/assets/: manifest.json
agent-mock/: README.md  agent.py  manifest.json  pyproject.toml
agent-simple/: README.md  agent.py  manifest.json  pyproject.toml
agent-upcamp/: Dockerfile  README.md  disclaimer.md  entrypoint.sh  pyproject.toml  sample.env
agent-upcamp/gpt_agent/: __main__.py  auth.py
agent-upcamp/gpt_agent/assets/: manifest.json
agent/gpt_agent/: __main__.py  agent.py  api.py  auth.py  domain.py  file_system_repos.py
agent/gpt_agent/assets/: manifest.json
browser-extension/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
browser-extension/src/: background.ts  constants.ts  index.html  main.ts  manifest.json  popup.html  popup.ts  side-panel.ts
browser-extension/src/components/: AddCopilot.vue  AddCopilotModal.vue  BtnClose.vue  ChatInput.vue  ClearChatButton.vue  CopilotChat.vue  CopilotConfig.vue  CopilotList.vue  CopilotName.vue  CopyButton.vue  Footer.vue  FormInput.vue  FormTextArea.vue  Message.vue  Modal.vue  ModalForm.vue  NewPromptButton.vue  PageOverlay.vue  PromptEditor.vue  TextArea.vue  ToastMessage.vue
browser-extension/src/pages/: Index.vue  (+1 more)
keycloak/: realm.json
(+18 files in other folders)
